# mailbucket

./: .dockerignore  .editorconfig  .gitignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  dev.md  docker-compose.yml  werf.yaml
.github/workflows/: werf-cleanup.yaml  werf-converge.yaml
.helm/templates/: deployment.yaml  mailbucket.yaml  service.yaml
bucket/: .gitignore  Dockerfile  build.gradle  setenv.sh  settings.gradle
bucket/grails-app/conf/: application.yml  logback.groovy
bucket/grails-app/controllers/bucket/: EmailController.groovy  UrlMappings.groovy
bucket/grails-app/domain/bucket/: Email.groovy  Header.groovy
bucket/grails-app/init/bucket/: Application.groovy  BootStrap.groovy
bucket/grails-app/services/bucket/: ConfigService.groovy  EmailService.groovy
bucket/grails-app/views/: home.gsp
bucket/grails-app/views/clientError/: notFound.gson
bucket/grails-app/views/email/: _email.gson  retrieve.gson
bucket/grails-app/views/serverError/: internalServerError.gson
bucket/src/integration-test/groovy/bucket/: EmailSpec.groovy
bucket/src/main/groovy/bucket/: MyMessageHandlerFactory.groovy  Utils.groovy
bucket/tomcat-conf/: catalina.properties  context.xml  server.xml  web.xml
src/: args.rs  email_handler.rs  handler.rs  lib.rs  main.rs  stream.rs  transport.rs
src/server/: email_handler.rs  http_server.rs  mod.rs
src/server/smtp_server/: dispatch.rs  handler.rs  mod.rs  stream.rs
src/smtp/: dispatch.rs  handler.rs  mod.rs  stream.rs  transport.rs
tests/: integration_test.rs
